2007-04-17  Francis Kung  <fkung@redhat.com>

	PR classpath/31311
	* gnu/java/awt/peer/gtk/ComponentGraphics.java
	(dispose): Removed method.
	(disposeSurface): Removed method.
	* gnu_java_awt_peer_gtk_ComponentGraphics.h: Regenerated.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
	(Java_gnu_java_awt_peer_gtk_ComponentGraphics_disposeSurface): Removed.
	(Java_gnu_java_awt_peer_gtk_ComponentGraphics_initState): Destroy surface
	after it is used to create a cairo context.

2007-04-16  Tom Tromey  <tromey@redhat.com>

	https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=236614
	* gnu/javax/net/ssl/provider/SSLSocketFactoryImpl.java
	(createSocket): Change order of delegation.

2007-03-30  Andrew Haley  <aph@redhat.com>

	* javax/management/ObjectName.java: Handle 0-length names.

2007-03-27  Andrew Haley  <aph@redhat.com>

	* javax/management/MBeanServerFactory.java: Use the domain that
	we've been passed, not the fixed string "DefaultDomain".

2007-03-29  Tom Tromey  <tromey@redhat.com>

	PR libgcj/29869:
	* gnu/java/util/jar/JarUtils.java (log): Commented out.
	(readSFManifest): Don't log.

2007-03-28  Casey Marshall  <csm@gnu.org>

	* gnu/javax/net/ssl/provider/ClientHandshake.java (RSAGen.implRun):
	check keyEncipherment bit of the certificate, and just pass the public
	key to the cipher.

2007-03-27  Casey Marshall  <csm@gnu.org>

	PR classpath/31302:
	* gnu/javax/net/ssl/provider/SSLSocketImpl.java (SSLSocketImpl):
	Always make a new socket.
	(bind, connect, getInetAddress, getLocalAddress, getPort,
	getLocalPort, getRemoteSocketAddress, getLocalSocketAddress,
	setTcpNoDelay, getTcpNoDelay, setSoLinger, getSoLinger,
	setOOBInline, getOOBInline, setSoTimeout, getSoTimeout,
	setSendBufferSize, getSendBufferSize, setReceiveBufferSize,
	getReceiveBufferSize, setKeepAlive, getKeepAlive, setTrafficClass,
	getTrafficClass, setReuseAddress, getReuseAddress, close,
	shutdownInput, shutdownOutput, isConnected, isBound, isClosed,